starting web app

--- a/app/templates/chordify.html
+++ b/app/templates/chordify.html
@@ -2,8 +2,8 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Quadratic Equation Solver</title>
-  <meta name="description" content="Quadratic Equation Solver">
+  <title>Chordify: Emily's Chord Recommending App</title>
+  <meta name="description" content="Chordify">
   <meta name="author" content="Galvanize DSI">
 
     <script type="text/javascript" src="{{ url_for('static', filename='jquery.js') }}">  </script>
@@ -12,9 +12,10 @@
 
 <body>
 
-    <h1>The DSI Quadratic Equation Solver</h1>
-    <p>This app will solve quadratic equations for you!</p>
-    <p>Please enter the coefficients below!</p>
+    <h1>CHORDIFY</h1>
+    <p>Finally! An app that helps beginning song writers match chords to words. Enter lyrics, poetry, or any set of words and get back an appropriate set of chords to use in composing a song!
+</p>
+    <p>Please enter your favorite words below!</p>
 
     <div>
         <!-- These have id's so that later we can pull out data using js. -->
