moved html to templates folder

--- a/app/templates/chordify.html
+++ b/app/templates/chordify.html
@@ -19,13 +19,13 @@
 
     <div>
         <!-- These have id's so that later we can pull out data using js. -->
-        <span>a:</span> <input id="a"></input>
-        <span>b:</span> <input id="b"></input>
-        <span>c:</span> <input id="c"></input>
+        <span>Words:</span> <input id="Words"></input>
+        <!-- <span>b:</span> <input id="b"></input> -->
+        <!-- <span>c:</span> <input id="c"></input> -->
     </div>
 
     <div>
-        <button type="button" id="solve">Solve!</button>
+        <button type="button" id="get_chords">Get Chords!</button>
     </div>
 
     <div>
