--- a/app/templates/chordify.html
+++ b/app/templates/chordify.html
@@ -19,13 +19,13 @@
 
     <div>
         <!-- These have id's so that later we can pull out data using js. -->
-        <span>Words:</span> <input id="Words"></input>
+        <span>Words:</span> <input id="words"></input>
         <!-- <span>b:</span> <input id="b"></input> -->
         <!-- <span>c:</span> <input id="c"></input> -->
     </div>
 
     <div>
-        <button type="button" id="get_chords">Get Chords!</button>
+        <button type="button" id="solves">Get Chords!</button>
     </div>
 
     <div>
@@ -37,12 +37,17 @@
 <script type="text/javascript">
 
 let get_input_coefficients = function() {
-    let a = $("input#a").val()
-    let b = $("input#b").val()
-    let c = $("input#c").val()
-    return {'a': parseInt(a),
-            'b': parseInt(b),
-            'c': parseInt(c)}
+
+  let words_input = $("input#words").val()
+
+    return {'words': words_input}
+
+    // let a = $("input#a").val()
+    // let b = $("input#b").val()
+    // let c = $("input#c").val()
+    // return {'a': parseInt(a),
+    //         'b': parseInt(b),
+    //         'c': parseInt(c)}
 };
 
 let send_coefficient_json = function(coefficients) {
@@ -58,7 +63,7 @@ let send_coefficient_json = function(coefficients) {
 };
 
 let display_solutions = function(solutions) {
-    $("span#solution").html(solutions.root_1 + " and " + solutions.root_2)
+    $("span#solution").html(solutions.root_1)
 };
 
 $(document).ready(function() {
