building web app

--- a/chordify/app/templates/chordify.html
+++ b/chordify/app/templates/chordify.html
@@ -25,7 +25,7 @@
     </div>
 
     <div>
-        <button type="button" id="solves">Get Chords!</button>
+        <button type="button" id="solve">Get Chords!</button>
     </div>
 
     <div>
